# flutter_vless

./: .gitattributes  .gitignore  .gitmodules  .pubignore  AUTHORS  CHANGELOG.md  IOS_SETUP.md  MACOS_SETUP.md  MACOS_XRAY_SETUP.md  NOTICE  README.md  TRADEMARKS.md  WINDOWS_SETUP.md  pubspec.yaml  test_config.json
.github/workflows/: ci.yml  publish-android-runtime.yml
android_runtime/xray_android/: README.md  build.gradle.kts  settings.gradle.kts
apps/vless_companion/: .flutter-plugins-dependencies
doc/: README.md  api.md  architecture.md  compatibility.md  configuration.md  device_matrix.md  examples.md  getting-started.md  macos_packet_tunnel_architecture.md  protocol_support_roadmap.md  security.md  troubleshooting.md
doc/platform/: README.md  android.md  ios.md  macos.md  windows.md
doc/release/: android-runtime-maven-central.md  xray-android-emulator-v26.6.1.md  xray-android-emulator-v26.6.22.md  xray-android-emulator-v26.6.27.md  xray-android-v26.6.1.md  xray-android-v26.6.22.md  xray-android-v26.6.27.md  xray-ios-v26.6.1.md  xray-ios-v26.6.22.md  xray-ios-v26.6.27.md  xray-macos-v26.6.1.md  xray-macos-v26.6.22.md  xray-macos-v26.6.27.md
example/: .gitignore  README.md  pubspec.yaml
example/android/: .gitignore
example/integration_test/: android_xray_runtime_smoke_test.dart  core_version_smoke_test.dart  live_test.dart  vpn_smoke_test.dart
example/ios/: Podfile
example/lib/: main.dart  (+1 more)
ios/: XRAY_BUILD.md  build_xray_ios.sh  flutter_vless.podspec
lib/: flutter_vless.dart
macos/: flutter_vless.podspec
scripts/: README.md  SETUP_GOMOBILE.md  build_all.sh  build_xray_macos.sh  create_universal_xcframework.sh  download_xray_macos.sh
test/: flutter_vless_api_test.dart  flutter_vless_ios_channel_test.dart  subscription_import_test.dart  url_protocols_test.dart  url_xhttp_test.dart  vless_status_test.dart  xray_config_model_test.dart  xray_config_test_utils.dart  xray_json_config_test.dart
tool/: build_android_runtime_maven.sh  create_xray_ios_release.sh  create_xray_macos_release.sh  prepare_apple_swiftpm.sh  publish_android_runtime_maven.sh  reset_example_app_mode.sh  run_real_device_matrix.sh  test_android_maven_runtime.sh  test_ios_tunnel_support.sh  xray_config_probe.dart
windows/: CMakeLists.txt  README.MD  XRAY_SETUP.md  flutter_vless_plugin.cpp  proxy_service.cpp  v2ray_manager.cpp  v2ray_manager.h  vpn_service.cpp  vpn_service.h
windows/include/flutter_vless/: flutter_vless_plugin.h
(+74 files in other folders)
